--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,8 @@
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
